--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrays-Practice</title>
+    <script defer src="./app.js"></script>
 </head>
 <body>
     <h1>Arrays Pactice Home Work</h1>
